@@ -749,22 +749,23 @@ if "--unmerge" in myopts:
 
 			# a category and package name have been given
 			else:
-				localtree=portage.vartree()	
+				localtree=portage.vartree(portage.root)	
 				mymatches=localtree.dep_match(x)
 				# if no matches were found, try again by adding a '=' dep symbol if no
 				# dep symbols are already present
 				if not mymatches and x[0] not in ('<','>','=','~'):
 					mymatches=localtree.dep_match("="+x)
+
 				# only loops over the matches if they were found
 				if mymatches:
 					for package in mymatches:
-						package_parts=split(package, '/')
-						full_path=var_path+"/"+package+"/"+package_parts[1]+".ebuild"
-						if not os.path.exists(full_path):
-							print "The ebuild '"+full_path+"' couldn't be found."
-							print "Your portage installation tree seems to be corrupted."
-						else:
-							full_paths_local[full_path]=1
+						myfullpaths=localtree.getEbuildPaths(package)
+						for full_path in myfullpaths :
+							if not os.path.exists(full_path):
+								print "The ebuild '"+full_path+"' couldn't be found."
+								print "Your portage installation tree seems to be corrupted."
+							else:
+								full_paths_local[full_path]=1
 
 			# check for the --safe switch
 			if not "--all" in myopts:
