@@ -1,6 +1,14 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 
+  4 Feb 2002; G.Bevin <gbevin@gentoo.org> ebuild.sh, emerge, portage.py :
+  added binary compatibility slots, this also contains additional code to keep
+  the unmerging of packages backwards compatible.
+  
+  4 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
+  added back support for the "ebuild help" command which seems to have
+  disappeared somewhere along the updates
+  
   4 Feb 2002; G.Bevin <gbevin@gentoo.org> make.conf, make.globals :
   added description and default entry for the imlib USE variable
   added flag to prozilla to disable prozilla's waiting for a user's keypress
